--- a/assets/css/site/_site.scss
+++ b/assets/css/site/_site.scss
@@ -144,6 +144,8 @@
     // 3.1. Homepage
     @import	"_3.1-page--home";
 
+    // 3.2. Compliance
+    @import	"_3.2-page--compliance";
 
 // 3. END +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
