--- a/assets/css/site/_1.1-object--global.scss
+++ b/assets/css/site/_1.1-object--global.scss
@@ -51,14 +51,9 @@ a { cursor: pointer; }
 
 // A.1.3. END
 
-.toggle-content {
+.toggle-content { display: none;
 
-    display: none;
-
-    &.on {
-
-        display: block;
-    }
+    &.on { display: block; }
 }
 
 // A.1.3. END
@@ -78,19 +73,11 @@ a { cursor: pointer; }
 // A.1.4. END
 
 .button {
-
-//background: $white;
-color: $white;
-padding: 5px 10px;
-border: solid 2px $white;
-position: relative;
-
-    &:hover {
-
-        background: $white;
-        color: $black!important;
-        text-decoration: none;
-
+    
+    padding: $baseline-small $baseline;
+    
+    &.btn-blue { background: $kd-royal; color: $white;
+        &:hover { color: $white; background: $kd-mauve; }
     }
 }
 
