--- a/assets/css/site/_3.2-page--compliance.scss
+++ b/assets/css/site/_3.2-page--compliance.scss
@@ -4,6 +4,7 @@
 
 // A.1. STRUCTURE -----------------------------------------------------------------------------------------------------
 
+#page-192,
 #page-195 {
     
     margin-top: 240px;
