--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -1688,6 +1688,7 @@ a {
     margin: 0;
     padding: 0;
     padding-top: 20px; }
+    #mobi-nav ul .pagelink,
     #mobi-nav ul .textLink {
       list-style-type: none;
       display: block;
@@ -1695,6 +1696,7 @@ a {
       border-bottom: 1px solid #BBC5CE;
       color: #FFFFFF;
       text-align: center; }
+      #mobi-nav ul .pagelink a,
       #mobi-nav ul .textLink a {
         display: block;
         text-align: center;
@@ -1702,8 +1704,10 @@ a {
         font-size: 1.5em;
         color: #FFFFFF;
         font-family: 'gow', helvetica, 'arial black'; }
+        #mobi-nav ul .pagelink a:hover,
         #mobi-nav ul .textLink a:hover {
           background: #DDDDDD; }
+      #mobi-nav ul .pagelink.current_page_item,
       #mobi-nav ul .textLink.current_page_item {
         background: #DDDDDD; }
 
@@ -1767,8 +1771,8 @@ a {
 
 @media only screen and (min-width: 481px) and (max-width: 1023px) {
   #masthead .burger {
-    display: none; }
-  .mobi-nav {
+    display: block; }
+  .main-nav {
     display: none; } }
 
 @media only screen and (min-width: 1024px) {
@@ -3271,27 +3275,37 @@ a {
   .container {
     padding: 0; } }
 
+#page-192,
 #page-195 {
   margin-top: 240px; }
+  #page-192 .entry-header h1,
   #page-195 .entry-header h1 {
     font-size: 1.7em;
     margin-bottom: 20px; }
+    #page-192 .entry-header h1 a,
     #page-195 .entry-header h1 a {
       color: #000A3F; }
+  #page-192 .button,
   #page-195 .button {
     margin: 40px auto; }
   @media only screen and (min-width: 481px) and (max-width: 1023px) {
+    #page-192,
     #page-195 {
       margin-top: 100px; }
+      #page-192 .container,
       #page-195 .container {
         margin: 20px; } }
   @media only screen and (min-width: 321px) and (max-width: 480px) {
+    #page-192,
     #page-195 {
       margin-top: 100px; }
+      #page-192 .container,
       #page-195 .container {
         margin: 20px; } }
   @media only screen and (max-width: 320px) {
+    #page-192,
     #page-195 {
       margin-top: 100px; }
+      #page-192 .container,
       #page-195 .container {
         margin: 20px; } }
