--- a/assets/css/site/_site.scss
+++ b/assets/css/site/_site.scss
@@ -147,6 +147,9 @@
     // 3.2. Compliance
     @import	"_3.2-page--compliance";
 
+    // 3.3. Blog
+    @import	"_3.3-page--blog";
+
 // 3. END +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 // END OF FILE ########################################################################################################
