--- a/assets/css/site/_1.1-object--global.scss
+++ b/assets/css/site/_1.1-object--global.scss
@@ -48,6 +48,7 @@ a { cursor: pointer; }
 
 // A.1.3. END
 
+figure { margin: 0; padding: 0; }
 
 // A.1.3. END
 
@@ -79,6 +80,8 @@ a { cursor: pointer; }
     &.btn-blue { background: $kd-royal; color: $white;
         &:hover { color: $white; background: $kd-mauve; }
     }
+    
+    &.btn-blog { margin: $baseline auto $baseline-medium; display: block; width: 60px; text-align: center; }
 }
 
 
@@ -158,15 +161,8 @@ a { cursor: pointer; }
 
 // A.7. height/aspect ratio constrainer
 
-#bob-fixedSize {
-    display: inline-block;
-    position: relative;
-    width: 100%;
-}
-
-#bob-fixedHeight {
-    padding-top: 50%;
-}
+#bob-fixedSize      { display: inline-block; position: relative; width: 100%; }
+#bob-fixedHeight    { padding-top: 50%; }
 
 #fixedSize-inner {
     position: absolute;
@@ -192,19 +188,11 @@ a { cursor: pointer; }
    position: relative;
    text-align: center;
    cursor: default;
-   //background: url(../images/bgimg.png);
 
-   img {
-       display: block;
-       margin: 0 auto;
-   }
+   img { display: block; margin: 0 auto; }
 
     .card-title,
-    .mainImg {
-
-       transform: translateX(0%);
-
-   }
+    .mainImg { transform: translateX(0%); }
 
    .mask {
 
@@ -218,85 +206,39 @@ a { cursor: pointer; }
        left: 0;
        transform: translateX(-100%);
 
-       .foil {
-
-           @include vertical-align(absolute);
-           left: 10px;
-           right: 10px;
-
-       }
-
-       img, h2, p, a {
-           opacity: 0;
-           transform: translateX(-100%);
-           color: $white;
-       }
-
-       img {
-           max-width: 75%;
-       }
-
-       h2 {
-           margin: 0;
-       }
-
-       p {
-
-           @include libre-header();
-           font-size: $small;
-
-       }
-
-
-
+       .foil    { @include vertical-align(absolute); left: 10px; right: 10px; }
+       img, h2, p, a    { opacity: 0; transform: translateX(-100%); color: $white; }
+       img  { max-width: 75%; }
+       h2   { margin: 0; }
+       p    { @include libre-header(); font-size: $small; }
    }
 
    &:hover, &:focus {
 
         .card-title,
-        .mainImg {
-            transform: translateX(100%);
-            transition: transform 0.3s ease 0.2s;
+        .mainImg { transform: translateX(100%); transition: transform 0.3s ease 0.2s;
 
         }
 
-       .mask {
-          opacity: 1;
-          transform: translateX(0%); 
-          transition: transform 0.3s ease 0.2s;
+       .mask { opacity: 1; transform: translateX(0%); transition: transform 0.3s ease 0.2s;
 
 
            img, h2, p, a {
 
-               opacity: 1;
-               transform: translateX(0%); 
-               transition: opacity 0.3s ease 0.4s,
-                           transform 0.2s ease 0.3s;
-
+                opacity: 1;
+                transform: translateX(0%); 
+                transition: opacity 0.3s ease 0.4s,
+                transform 0.2s ease 0.3s;
            }
-
        }
-
-   }
-
-}	
-.reveal {
-    outline: none;
+    }
 }
 
-.bob-hoverImg {
-    text-align: center;	
-    margin: 0 auto;			
-}
-
-.card-title { margin-top: 0; }
+.reveal         { outline: none; }
+.bob-hoverImg   { text-align: center;	margin: 0 auto; }
+.card-title     { margin-top: 0; }
 
 // A.7. END
-
-
-
-
-
 
 
 // A.1.4. END
