--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -1830,38 +1830,17 @@ figure {
         width: 30px;
         height: 30px; }
 
-.tweets {
-  list-style-type: none;
-  margin: 0;
-  padding: 5px 0;
-  background: #777777; }
-  .tweets li {
-    list-style-type: none;
-    font-size: 0.75em;
-    margin: 5px 0;
-    padding: 10px 5px;
-    padding-left: 20px;
-    line-height: normal;
-    color: #555555;
-    background: #DDDDDD;
-    position: relative; }
-    .tweets li:after {
-      position: absolute;
-      top: 50%;
-      -webkit-transform: translateY(-50%);
-          -ms-transform: translateY(-50%);
-              transform: translateY(-50%);
-      width: 25px;
-      height: 25px;
-      content: '';
-      left: -15px;
-      border: 3px solid #DDDDDD;
-      background: url("../images/site/icon-twitter.svg") center center no-repeat #FFFFFF;
-      background-size: 100% 100%;
-      border-radius: 100%; }
-    .tweets li a {
-      display: block;
-      color: #333333; }
+.apss-social-share .apss-single-icon a {
+  margin: 0; }
+  .apss-social-share .apss-single-icon a:before {
+    -webkit-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+            transform: rotate(0deg); }
+
+.apss-social-share:before {
+  content: 'SHARE WITH:';
+  margin-left: 5px;
+  font-size: 0.75em; }
 
 .card {
   position: relative; }
