--- a/assets/css/site/_2.3-section--footend.scss
+++ b/assets/css/site/_2.3-section--footend.scss
@@ -18,6 +18,7 @@
     
     // A.1.1. EMAIL US BUTTON
     
+    .page-email-us,
     .email-us { position: fixed; bottom: 20px; right: 85px;
         .icon { width: 65px; height: 65px; }
     }
