--- a/assets/css/site/_3.3-page--blog.scss
+++ b/assets/css/site/_3.3-page--blog.scss
@@ -7,12 +7,16 @@
 .single-post { img { max-width: 100%; height: auto; }}
 
 .single-post,
+#page-id-212,
+#page-id-193,
 #page-212,
 #page-193 {
     
+    margin: 0;
     margin-top: 240px;
     
     .articles { padding-bottom: $baseline-medium; }
+    
     .article { 
     
         @extend .feature--one-whole;
@@ -22,7 +26,6 @@
         position: relative; 
         overflow: hidden; 
     }
-    
     
 // A.1. END -----------------------------------------------------------------------------------------------------------
 
@@ -73,6 +76,6 @@
 
 // F. END +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
-}    
-    
+}
+
 // END OF FILE ########################################################################################################
