--- a/assets/css/site/_3.3-page--blog.scss
+++ b/assets/css/site/_3.3-page--blog.scss
@@ -11,6 +11,7 @@
 #page-193 {
     
     margin-top: 240px;
+    background: $kd-royal;
     
     .articles { padding-bottom: $baseline-medium; }
     .article { 
