compliance page blog page

--- a/assets/css/site/_1.1-object--global.scss
+++ b/assets/css/site/_1.1-object--global.scss
@@ -26,6 +26,7 @@ p { @include default-font(); font-size: $normal; }
 // A.1.1 LINKS
 
 a { cursor: pointer; }
+.btn-back { width: 60px; display: block; text-align: center;}
 
 // A.1.1. END
 
