--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -1253,6 +1253,11 @@ p {
 a {
   cursor: pointer; }
 
+.btn-back {
+  width: 60px;
+  display: block;
+  text-align: center; }
+
 .section {
   padding: 0;
   margin: 0; }
@@ -3205,9 +3210,20 @@ figure {
       #page-195 .container {
         margin: 20px; } }
 
-.single-post img {
-  max-width: 100%;
-  height: auto; }
+.single-post {
+  height: auto;
+  margin: 0; }
+  .single-post img {
+    max-width: 100%;
+    height: auto; }
+
+.page-id-212 {
+  background: #000A3F;
+  height: auto;
+  margin: 0; }
+  .page-id-212 h1 {
+    display: block;
+    color: #FFFFFF; }
 
 .single-post,
 #page-id-212,
@@ -3215,8 +3231,7 @@ figure {
 #page-212,
 #page-193 {
   margin: 0;
-  margin-top: 240px;
-  background: #000A3F; }
+  margin-top: 240px; }
   .single-post .articles,
   #page-id-212 .articles,
   #page-id-193 .articles,
