--- a/assets/css/site/_1.6-object--modals.scss
+++ b/assets/css/site/_1.6-object--modals.scss
@@ -57,7 +57,7 @@
             background: $ia-grey20;
             display: block;
             
-            h5 {margin: 0; text-transform: uppercase; font-weight: bold; color: $ia-red;}
+            h5 {margin: 0; text-transform: uppercase; font-weight: bold; color: $kd-royal;}
             
         }
     }
